--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ reqwest = { version = "0.11",  default-features = false, features = [
     "cookies",
     "gzip",
     "json",
+    "multipart",
 ] }
 serde = { version = "1.0", features = [
     "derive",
